WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28307
[Haiku] Fix RenderThemeHaiku build.
https://bugs.webkit.org/show_bug.cgi?id=28307
Summary
[Haiku] Fix RenderThemeHaiku build.
Maxime Simon
Reported
2009-08-14 09:24:24 PDT
The patch which introduced RenderThemeHaiku was wrong in some places. ( see:
https://bugs.webkit.org/show_bug.cgi?id=28258#c5
) Here is a patch to correct this. Regards, Maxime
Attachments
Patch v1
(3.39 KB, patch)
2009-08-14 09:31 PDT
,
Maxime Simon
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maxime Simon
Comment 1
2009-08-14 09:31:19 PDT
Created
attachment 34846
[details]
Patch v1
Oliver Hunt
Comment 2
2009-08-14 13:14:22 PDT
Comment on
attachment 34846
[details]
Patch v1 r=me
Eric Seidel (no email)
Comment 3
2009-08-14 13:22:36 PDT
Comment on
attachment 34846
[details]
Patch v1 Rejecting patch 34846 from commit-queue. This patch will require manual commit. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 cwd: None
Eric Seidel (no email)
Comment 4
2009-08-14 13:25:35 PDT
Comment on
attachment 34846
[details]
Patch v1 Sorry, the commit-queue is dumb. There were 2 commits to the WebCore/ChangeLog between when the commit-queue updated and when it tried to commit. I'm about to teach it how to update itself before commit...
bug 28316
Maxime Simon
Comment 5
2009-08-14 13:31:27 PDT
(In reply to
comment #4
)
> (From update of
attachment 34846
[details]
) > Sorry, the commit-queue is dumb. There were 2 commits to the WebCore/ChangeLog > between when the commit-queue updated and when it tried to commit. I'm about > to teach it how to update itself before commit...
bug 28316
Okay. I didn't understand why it could fail as there was nothing "exotic" in this patch. But indeed bugzilla-tool is still in a learning phase. ;)
Eric Seidel (no email)
Comment 6
2009-08-14 13:52:16 PDT
Comment on
attachment 34846
[details]
Patch v1 Clearing flags on attachment: 34846 Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/platform/haiku/RenderThemeHaiku.cpp M WebCore/platform/haiku/RenderThemeHaiku.h Committed
r47296
M WebCore/ChangeLog M WebCore/platform/haiku/RenderThemeHaiku.cpp M WebCore/platform/haiku/RenderThemeHaiku.h
r47296
= c0737da3bd221d15fd82b932dc33967859956e54 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk
http://trac.webkit.org/changeset/47296
Eric Seidel (no email)
Comment 7
2009-08-14 13:52:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug