2009-08-14  Maxime Simon  <simon.maxime@gmail.com>

Reviewed by Oliver Hunt.

        [Haiku] Fix RenderThemeHaiku build.
        https://bugs.webkit.org/show_bug.cgi?id=28307

        * platform/haiku/RenderThemeHaiku.cpp: Included RenderThemeHaiku.h
        instead of RenderTheme.h.
        (WebCore::RenderThemeHaiku::paintCheckbox): Removed the wrong 'virtual'
        before the function.
        (WebCore::RenderThemeHaiku::paintRadio): Removed the wrong 'virtual'
        before the function.
        * platform/haiku/RenderThemeHaiku.h: Corrected wrong function definitions.

Canonical link: https://commits.webkit.org/38897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47296 268f45cc-cd09-0410-ab3c-d52691b4dbfc