WebCore/platform/haiku/RenderThemeHaiku.h
@@ -32,7 +32,7 @@ namespace WebCore {
     class RenderThemeHaiku : public RenderTheme {
     private:
         RenderThemeHaiku();
-        ~RenderThemeHaiku();
+        virtual ~RenderThemeHaiku();
 
     public:
         static PassRefPtr<RenderTheme> create();
@@ -55,14 +55,14 @@ namespace WebCore {
         virtual void systemFont(int propId, FontDescription&) const;
 
     protected:
-        virtual paintCheckbox(RenderObject*, const RenderObject::PaintInfo&, const IntRect&);
+        virtual bool paintCheckbox(RenderObject*, const RenderObject::PaintInfo&, const IntRect&);
         virtual void setCheckboxSize(RenderStyle*) const;
 
         virtual bool paintRadio(RenderObject*, const RenderObject::PaintInfo&, const IntRect&);
         virtual void setRadioSize(RenderStyle*) const;
 
         virtual void adjustMenuListStyle(CSSStyleSelector*, RenderStyle*, Element*) const;
-        virtual bool RenderThemeHaiku::paintMenuList(RenderObject*, const RenderObject::PaintInfo&, const IntRect&);
+        virtual bool paintMenuList(RenderObject*, const RenderObject::PaintInfo&, const IntRect&);
     };
 
 } // namespace WebCore
